Fixed some overflow issues with the onboarding process on desktop view

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -113,6 +113,8 @@ nav i {
 .popup {
     position: fixed;
     top: 25%;
+
+    max-width: 425px;
 }
 
 .infobox-container {
